link de inscripcion añadido a la seccion de recorridos

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <img src="/img/gr-logo.svg" alt="logo-guacarace" />
           </div>
           <div class="pt-5 d-none d-sm-block d-md-none">
-            <img class="text-center w-50" src="/img/gr-logo.svg" alt="logo-guacarace" />
+            <img class="text-center w-50 img-fluid" src="/img/gr-logo.svg" alt="logo-guacarace" />
           </div>
         </div>
         <div class="col-sm-12 col-md-6">
@@ -103,7 +103,7 @@
           </p>
           <div class="row align-items-center">
             <a href="./pages/inscripciones.html"
-              class="link-light fw-bold fs-5 fst-italic text-uppercase text-center font-monospace pt-3">Inscribirme</a>
+              class="link-resena fw-bold fs-5 fst-italic text-uppercase text-center font-monospace pt-3 pb-4">Inscribirme</a>
           </div>
 
         </div>
