--- a/pages/recorridos.html
+++ b/pages/recorridos.html
@@ -98,7 +98,10 @@
             </div>
 
             <div>
-              <a class="pt-4 nav-link fw-bold font-monospace text-uppercase" href="#">descargar recorrido</a>
+              <a class="pt-4 nav-link link-secondary fw-bold font-monospace text-uppercase text-center href="
+                #">descargar
+                recorrido</a>
+              <a class="pt-1 nav-link fw-bold font-monospace text-uppercase text-center" href="#">Inscribirme</a>
             </div>
           </div>
           <div class="col-12 col-md-6">
@@ -125,7 +128,10 @@
             </div>
 
             <div>
-              <a class="pt-4 nav-link fw-bold font-monospace text-uppercase" href="#">descargar recorrido</a>
+              <a class="pt-4 nav-link link-secondary fw-bold font-monospace text-center text-uppercase"
+                href="#">descargar
+                recorrido</a>
+              <a class="pt-1 nav-link fw-bold font-monospace text-uppercase text-center" href="#">Inscribirme</a>
             </div>
           </div>
           <div class="col-12 col-md-6">
@@ -152,7 +158,10 @@
             </div>
 
             <div>
-              <a class="pt-4 nav-link fw-bold font-monospace text-uppercase" href="#">descargar recorrido</a>
+              <a class="pt-4 nav-link link-secondary fw-bold font-monospace text-center text-uppercase"
+                href="#">descargar
+                recorrido</a>
+              <a class="pt-1 nav-link fw-bold font-monospace text-uppercase text-center" href="#">Inscribirme</a>
             </div>
           </div>
           <div class="col-12 col-md-6">
@@ -186,10 +195,7 @@
             se les pide que se lo hagan notar y que le pidan que la levante.</p>
           </p>
         </div>
-        <div class="col-12 col-md-6 text-end d-sm-none d-md-block">
-          <img src="/img/eco.png" alt="medio-ambiente" class="w-50 h-auto" />
-        </div>
-        <div class="col-12 col-md-6 text-center d-md-none d-sm-block">
+        <div class="col-12 col-md-6 text-center">
           <img src="/img/eco.png" alt="medio-ambiente" class="w-50 h-auto" />
         </div>
       </div>
