--- a/pages/info.html
+++ b/pages/info.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Aclara tus dudas y conoce toda la informacion sobre la carrera">
   <meta name="keywords" content="RUNNING, TRAIL, CARRERA, AVENTURA">
+  <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,7 +17,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
-  <title>Faq | Guacarace</title>
+  <title>Info | Guacarace</title>
 </head>
 
 <body>
@@ -40,7 +41,7 @@
 
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./inscripciones.html">Inscripciones</a>
@@ -49,7 +50,7 @@
                 <a class="nav-link" href="./recorridos.html">Recorridos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./info.html">Info</a>
+                <a class="nav-link active" href="./info.html">Info</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./contacto.html">Contacto</a>
@@ -64,8 +65,45 @@
     </header>
     <!-- FIN HEADER -->
 
+
+    <section class="bg-gray">
+      <div class="row mx-auto container">
+        <div class="col-12 text-center pt-5 pb-5">
+          <h1 class="fc-brand-2 title-l">info</h1>
+        </div>
+      </div>
+
+      <div class="row mx-auto container-fluid bg-white">
+        <div class="col-12 pt-5 pb-5 text-center">
+          <h4 class="text-center fc-brand-2 fw-bold text-uppercase">reglamento de la carrera</h4>
+
+          <button type="button" class="btn btn-dark mt-4 text-uppercase font-monospace" data-bs-toggle="modal"
+            data-bs-target="#miModal">leer reglamento</button>
+
+          <!-- content modal -->
+          <div class="modal fade" id="miModal" tabindex="-1" aria-hidden="true" aria-labelledby="modalTitle">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="fc-brand pt-5 modal-title" id="modalTitle">reglamento</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="close"></button>
+                </div>
+                <div class="modal-body">
+
+                </div>
+                <div class="modal-footer">
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- content modal -->
+        </div>
+      </div>
+    </section>
+
     <!-- Seccion FAQ -->
-    <section class="info">
+    <!-- <section class="info">
       <div class="row p-4">
         <h2 class="fw-bold text-uppercase fc-brand">Acreditaciones</h2>
         <div class="col-12">
@@ -134,7 +172,7 @@
           <span class="d-block">Femenino de 60 años y mas</span>
         </div>
       </div>
-    </section>
+    </section>  -->
 
     <!-- Seccion FAQ -->
 
@@ -167,6 +205,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+
+
 
   <!-- Option 2: Separate Popper and Bootstrap JS -->
   <!--
