--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Elegi una distancia e inscribite!">
   <meta name="keywords" content="RUNNING, TRAIL, CARRERA, AVENTURA">
+  <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -41,10 +42,10 @@
 
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./inscripciones.html">Inscripciones</a>
+                <a class="nav-link active" href="./inscripciones.html">Inscripciones</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./recorridos.html">Recorridos</a>
