--- a/pages/recorridos.html
+++ b/pages/recorridos.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Conoce los recorridos de las 3 distancias" />
   <meta name="keywords" content="RUNNING, TRAIL, CARRERA, AVENTURA" />
+  <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -40,13 +41,13 @@
 
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./inscripciones.html">Inscripciones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./recorridos.html">Recorridos</a>
+                <a class="nav-link active" href="./recorridos.html">Recorridos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./info.html">Info</a>
@@ -98,7 +99,7 @@
             </div>
 
             <div>
-              <a class="pt-4 nav-link link-secondary fw-bold font-monospace text-uppercase text-center href="
+              <a class="pt-4 nav-link link-secondary fw-bold font-monospace text-uppercase text-center" href="
                 #">descargar
                 recorrido</a>
               <a class="pt-1 nav-link fw-bold font-monospace text-uppercase text-center" href="#">Inscribirme</a>
@@ -182,15 +183,15 @@
 
     <section class="recorridos__eco">
 
-      <div class="row p-4 d-flex justify-content-center align-items-center">
+      <div class="row p-4">
         <div class="col-12 col-md-6 mt-4">
-          <h2 class="fw-bold text-uppercase text-justify">medio ambiente</h2>
-          <p class="text-justify">
+          <h2 class="ps-4 fw-bold text-uppercase text-justify">medio ambiente</h2>
+          <p class="ps-4 pe-4 text-justify">
             Se recuerda a todos los competidores la importancia de mantener el
             medio ambiente limpio en las carreras de aventura. Deben guardar
             todos sus residuos, sean papeles de barras de cereales ó botellas
             plásticas.
-          <p class="text-justify">Habrá penalizaciones para quienes no respeten esta
+          <p class="ps-4 pe-4 text-justify">Habrá penalizaciones para quienes no respeten esta
             consigna. Si ven a alguien que tira basura, por más chica que sea,
             se les pide que se lo hagan notar y que le pidan que la levante.</p>
           </p>
