etiqueta icon para el logo en pestaña del navegador, añadida

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description"
     content="Guacarace, una carrera de trail-running pensada para los runners mas aventureros!" />
   <meta name="keywords" content="RUNNING, TRAIL, CARRERA, AVENTURA" />
+  <link rel="icon" href="./img/gr-logo.svg">
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -92,7 +93,7 @@
           <div class="p-5 text-center d-sm-none d-md-block">
             <img src="/img/gr-logo.svg" alt="logo-guacarace" />
           </div>
-          <div class="pt-5 d-none d-sm-block d-md-none">
+          <div class="p-5 d-none d-sm-block d-md-none">
             <img class="text-center w-50 img-fluid" src="/img/gr-logo.svg" alt="logo-guacarace" />
           </div>
         </div>
@@ -106,7 +107,7 @@
           </p>
           <div class="row align-items-center">
             <a href="./pages/inscripciones.html"
-              class="link-resena fw-bold fs-5 fst-italic text-uppercase text-center font-monospace pt-3 pb-4">Inscribirme</a>
+              class="link-resena fw-bold fs-5 fst-italic text-uppercase text-center font-monospace p-2">Inscribirme</a>
           </div>
 
         </div>
