--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -86,6 +86,11 @@
           <!-- content contact -->
           <div class="col-sm-12 col-md-6 pt-2 pb-5">
             <form class="row g-3 pt-5 pe-5 pb-5 rounded needs-validation" novalidate>
+              <div class="row">
+                <div class="col-auto">
+                  <h3 class="text-muted fst-italic text-start mb-4">Comunicate con nosotros</h3>
+                </div>
+              </div>
 
               <div class="col-md-6">
                 <label for="nombre" class="form-label">Nombre</label>
