maquetado seccion info

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
       <div class="row align-items-center">
         <div class="col-md-12 d-flex justify-content-center align-items-center hero">
           <div class="fs-5 fw-regular text-uppercase text-center pt-1">
-            <span class="fs-2 d-block fw-bold">superate</span>
-            <span class="fs-2 d-block fw-bold pb-2">sin limites</span>
+            <span class="title-l d-block">superate</span>
+            <span class="title-l d-block pb-2">sin limites</span>
 
             <span class="d-block border-top pt-2 text-uppercase">25/sep/2022</span>
 
