--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -74,7 +74,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-6 mt-5">
-            <h1 class="title-l pb-2">contacto</h1>
+            <h1 class="fw-bold fst-italic text-uppercase pb-2">contacto</h1>
             <span class="d-block pt-2 text-justify fw-bold">Tel: +54******</span>
             <span class="d-block pt-2 text-start fw-bold">Direccion: Av.Ferre 900</span>
             <hr>
@@ -120,7 +120,7 @@
 
                   </div>
                   <div class="col-auto">
-                    <button type="submit" class="btn btn-dark text-uppercase font-monospace">Enviar</button>
+                    <button type="submit" class="btn btn-primary text-uppercase font-monospace">Enviar</button>
                   </div>
 
                 </div>
