--- a/pages/recorridos.html
+++ b/pages/recorridos.html
@@ -68,20 +68,20 @@
 
     <!-- Seccion mapas -->
     <section class="recorridos">
-      <div class="row align-items-center pt-5 pb-5 bg-gray">
-        <h2 class="mt-5 text-center text-uppercase fw-bold">
-          elegi tu distancia
+      <div class="row container-fluid mx-auto align-items-center pt-3 bg-gray recorridos__background">
+        <h2 class="text-center text-uppercase fc-light title-l">
+          distancias
         </h2>
         <div class="col-12 text-center d-flex align-items-center justify-content-evenly">
-          <div class="row align-items-center mt-4">
+          <div class="row align-items-center">
             <div class="col-4">
-              <a class="btn btn-primary" href="#k-21" role="button">21K</a>
+              <a class="btn btn-light font-monospace fw-bold" href="#k-21" role="button">21K</a>
             </div>
             <div class="col-4">
-              <a class="btn btn-primary" href="#k-15" role="button">15K</a>
+              <a class="btn btn-light font-monospace fw-bold" href="#k-15" role="button">15K</a>
             </div>
             <div class="col-4">
-              <a class="btn btn-primary" href="#k-7" role="button">7K</a>
+              <a class="btn btn-light font-monospace fw-bold" href="#k-7" role="button">7K</a>
             </div>
           </div>
         </div>
