animacion en texto del hero

--- a/index.html
+++ b/index.html
@@ -71,7 +71,19 @@
     <main class="container-fluid">
       <div class="row align-items-center">
         <div class="col-md-12 d-flex justify-content-center align-items-center hero">
-          <div class="fs-5 fw-regular text-uppercase text-center pt-1">
+          <a class="hero__link" href="#lacarrera">
+            <p class="text-start title-m">inscribite</p>
+          </a>
+          <div class="hero__animation-contenedor">
+
+            <ul>
+              <li>21K</li>
+              <li>15K</li>
+              <li>7K</li>
+            </ul>
+          </div>
+
+          <!-- <div class="fs-5 fw-regular text-uppercase text-center pt-1">
             <span class="title-l d-block">superate</span>
             <span class="title-l d-block pb-2">sin limites</span>
 
@@ -79,7 +91,7 @@
 
             <a class="btn btn-outline-light text-uppercase font-monospace mt-4" href="#lacarrera"
               role="button">participar</a>
-          </div>
+          </div> -->
         </div>
       </div>
     </main>
