agregados iconos en la seccion de contacto

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <title>Guacarace</title>
 </head>
 
-<body class="body">
+<body>
   <div class="container-fluid">
     <!-- INICIO HEADER -->
     <header class="menu__style">
