--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -71,18 +71,18 @@
 
 
     <section class="contacto">
-      <div class="container">
-        <div class="row">
+      <div class="container-fluid">
+        <div class="row align-items-center justify-content-center">
           <div class="col-sm-12 col-md-6 mt-5">
-            <h1 class="fw-bold fst-italic text-uppercase pb-2">contacto</h1>
-            <span class="d-block pt-2 text-justify fw-bold">Tel: +54******</span>
-            <span class="d-block pt-2 text-start fw-bold">Direccion: Av.Ferre 900</span>
+            <h1 class="fw-bold text-uppercase pb-2">contacto</h1>
+            <span class="contacto__icons-tel d-block pt-2 text-justify fw-bold">Tel: +54******</span>
+            <span class="contacto__icons-gps d-block pt-2 text-start fw-bold">Direccion: Av.Ferre 900</span>
             <hr>
           </div>
         </div>
 
 
-        <div class="row mx-auto">
+        <div class="row mx-auto justify-content-center">
           <!-- content contact -->
           <div class="col-sm-12 col-md-6 pt-2 pb-5">
             <form class="row g-3 pt-5 pe-5 pb-5 rounded needs-validation" novalidate>
