ajustes seccion recorridos

--- a/pages/form-inscricipcion.html
+++ b/pages/form-inscricipcion.html
@@ -82,7 +82,7 @@
                         </div>
                         <div class="col-12 col-md-6 gr-2 mt-2 text-sm-start text-md-end">
                             <a href="/index.html">
-                                <span class="form__pre-link text-uppercase text-muted fw-regular">volver</span>
+                                <span class="form__pre-link text-uppercase text-muted fw-regular">home</span>
                             </a>
                         </div>
                     </div>
