--- a/pages/recorridos.html
+++ b/pages/recorridos.html
@@ -67,25 +67,32 @@
     <!-- FIN HEADER -->
 
     <!-- Seccion mapas -->
-    <section class="recorridos">
-      <div class="row container-fluid mx-auto align-items-center pt-3 bg-gray recorridos__background">
-        <h2 class="text-center text-uppercase fc-light title-l">
-          distancias
-        </h2>
-        <div class="col-12 text-center d-flex align-items-center justify-content-evenly">
-          <div class="row align-items-center">
-            <div class="col-4">
-              <a class="btn btn-light font-monospace fw-bold" href="#k-21" role="button">21K</a>
-            </div>
-            <div class="col-4">
-              <a class="btn btn-light font-monospace fw-bold" href="#k-15" role="button">15K</a>
-            </div>
-            <div class="col-4">
-              <a class="btn btn-light font-monospace fw-bold" href="#k-7" role="button">7K</a>
+    <section class="container-fluid recorridos">
+
+      <div class="row align-items-center recorridos__background">
+        <div class="col-12">
+          <h2 class="text-center text-uppercase fc-light title-l">
+            distancias
+          </h2>
+          <div class="col-12 mt-5 d-flex justify-content-center align-items-center">
+            <div class="row">
+              <div class="col-4">
+                <a class="btn btn-light font-monospace fw-bold" href="#k-21" role="button">21K</a>
+              </div>
+              <div class="col-4">
+                <a class="btn btn-light font-monospace fw-bold" href="#k-15" role="button">15K</a>
+              </div>
+              <div class="col-4">
+                <a class="btn btn-light font-monospace fw-bold" href="#k-7" role="button">7K</a>
+              </div>
             </div>
           </div>
+
         </div>
+
       </div>
+
+
 
       <!-- map 21k -->
       <div class="row d-flex align-items-center justify-content-center mt-5 p-4">
@@ -103,7 +110,8 @@
               <a class="pt-4 nav-link link-secondary fw-bold font-monospace text-uppercase text-center" href="
                 #">descargar
                 recorrido</a>
-              <a class="pt-1 nav-link fw-bold font-monospace text-uppercase text-center" href="#">Inscribirme</a>
+              <a class="pt-1 nav-link fw-bold font-monospace text-uppercase text-center"
+                href="./form-inscricipcion.html">Inscribirme</a>
             </div>
           </div>
           <div class="col-12 col-md-6">
@@ -116,7 +124,7 @@
         </div>
       </div>
       <!--fin map 21k -->
-
+      <hr>
       <!-- map 15k -->
       <div class="row d-flex align-items-center justify-content-center mt-5 p-4">
 
@@ -124,8 +132,8 @@
           <div class="col-12 col-md-6 recorridos__maps">
             <p id="k-15" class="fs-2 fw-bold text-uppercase">15K competitiva</p>
             <div class="recorridos__maps-items">
-              <span class="icon-list fw-bold d-block pt-1">Largada: 07:00 hs</span>
-              <span class="icon-list fw-bold d-block pt-1">PC en kms: 5, 12 y 18</span>
+              <span class="icon-list fw-bold d-block pt-1">Largada: 07:30 hs</span>
+              <span class="icon-list fw-bold d-block pt-1">PC en kms: 5 y 12</span>
               <span class="icon-list fw-bold d-block pt-1">tiempo limite: 4hs</span>
             </div>
 
@@ -133,12 +141,13 @@
               <a class="pt-4 nav-link link-secondary fw-bold font-monospace text-center text-uppercase"
                 href="#">descargar
                 recorrido</a>
-              <a class="pt-1 nav-link fw-bold font-monospace text-uppercase text-center" href="#">Inscribirme</a>
+              <a class="pt-1 nav-link fw-bold font-monospace text-uppercase text-center"
+                href="./form-inscricipcion.html">Inscribirme</a>
             </div>
           </div>
           <div class="col-12 col-md-6">
             <figure class="recorridos__maps-img">
-              <img src="/img/map_gr15.png" alt="recorrido-21km" />
+              <img src="/img/map_gr15.png" alt="recorrido-15km" />
             </figure>
 
           </div>
@@ -146,7 +155,7 @@
         </div>
       </div>
       <!--fin map 15k -->
-
+      <hr>
       <!-- map 7k -->
       <div class="row d-flex align-items-center justify-content-center mt-5 p-4">
 
@@ -154,7 +163,7 @@
           <div class="col-12 col-md-6 recorridos__maps">
             <p id="k-7" class="fs-2 fw-bold text-uppercase">7K competitiva</p>
             <div class="recorridos__maps-items">
-              <span class="icon-list fw-bold d-block pt-1">Largada: 07:00 hs</span>
+              <span class="icon-list fw-bold d-block pt-1">Largada: 08:00 hs</span>
               <span class="icon-list fw-bold d-block pt-1">PC en km: 5</span>
               <span class="icon-list fw-bold d-block pt-1">tiempo limite: 3hs</span>
             </div>
@@ -163,7 +172,8 @@
               <a class="pt-4 nav-link link-secondary fw-bold font-monospace text-center text-uppercase"
                 href="#">descargar
                 recorrido</a>
-              <a class="pt-1 nav-link fw-bold font-monospace text-uppercase text-center" href="#">Inscribirme</a>
+              <a class="pt-1 nav-link fw-bold font-monospace text-uppercase text-center"
+                href="./form-inscricipcion.html">Inscribirme</a>
             </div>
           </div>
           <div class="col-12 col-md-6">
@@ -184,8 +194,8 @@
 
     <section class="recorridos__eco">
 
-      <div class="row p-4">
-        <div class="col-12 col-md-6 mt-4">
+      <div class="row d-flex justify-content-center align-items-center pt-4">
+        <div class="col-12 col-md-6">
           <h2 class="ps-4 fw-bold text-uppercase text-justify">medio ambiente</h2>
           <p class="ps-4 pe-4 text-justify">
             Se recuerda a todos los competidores la importancia de mantener el
@@ -197,7 +207,7 @@
             se les pide que se lo hagan notar y que le pidan que la levante.</p>
           </p>
         </div>
-        <div class="col-12 col-md-6 text-center">
+        <div class="col-12 col-md-6 text-center text-md-end">
           <img src="/img/eco.png" alt="medio-ambiente" class="w-50 h-auto" />
         </div>
       </div>
