--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -72,13 +72,20 @@
           <div class="mt-5 pt-4 align-middle">
             <p class="fs-3 fw-bold fst-italic text-uppercase">Inscripciones</h1>
             <p class="title-l">21k / 15k / 7k</h1>
+
+            <div class="col-12">
+              <a href="#inscripciones">
+                <img src="/img/download.svg" alt="down-icon">
+              </a>
+            </div>
+
           </div>
 
         </div>
       </div>
     </section>
     <!-- Seccion inscripciones -->
-    <section class="inscripcion__form">
+    <section id="inscripciones" class="inscripcion__form">
       <div class="row align-items-center p-5">
         <div class="col-12 p-5">
           <div class="text-center">
@@ -96,9 +103,9 @@
       </div>
     </section>
 
-    <section>
-      <div class="row kit align-items-center">
-        <div class="col-sm-12 col-md-6 d-flex justify-content-center">
+    <section class="container-fluid">
+      <div class="row align-items-center kit">
+        <div class="col-sm-12 col-md-6 d-flex align-items-center justify-content-center">
           <div class="text-justify">
             <h2 class="text-uppercase mt-4 fw-bold pb-4">kit de carrera</h2>
             <span class="icon-list fw-bold d-block p-1">Remera oficial de la carrera</span>
