ajustes de estilos en home

--- a/index.html
+++ b/index.html
@@ -100,17 +100,14 @@
 
     <!-- FIN HERO -->
     <section id="lacarrera" class="resena">
-      <div class="row align-items-center">
+      <div class="row d-flex justify-content-center align-items-center">
         <div class="col-sm-12 col-md-6 pt-4">
-          <div class="p-5 text-center d-sm-none d-md-block">
-            <img src="/img/gr-logo.svg" alt="logo-guacarace" />
-          </div>
-          <div class="p-5 d-none d-sm-block d-md-none">
-            <img class="text-center w-50 img-fluid" src="/img/gr-logo.svg" alt="logo-guacarace" />
+          <div class="p-4 text-center">
+            <img class="img-fluid" src="/img/gr-logo.svg" alt="logo-guacarace" />
           </div>
         </div>
-        <div class="col-sm-12 col-md-6">
-          <p class="fw-bold fst-italic fs-5 text-center">
+        <div class="col-sm-12 col-md-6 p-5">
+          <p class="fw-bold fst-italic fs-5 text-md-justify">
             Pensada por runners para runners.<br>Empieza
             mucho antes del conteo previo a largar.<br>Cuando la
             imaginas, cuando entrenas para llegar a ella,<br>cuando en tu mente
@@ -119,7 +116,7 @@
           </p>
           <div class="row align-items-center">
             <a href="./pages/inscripciones.html"
-              class="link-resena fw-bold fs-5 fst-italic text-uppercase text-center font-monospace p-2">Inscribirme</a>
+              class="link-resena fw-bold fs-5 fst-italic text-uppercase text-justify font-monospace pt-2">Inscribirme</a>
           </div>
 
         </div>
