ultimo ajustes de estilos en todas las secciones

--- a/pages/info.html
+++ b/pages/info.html
@@ -169,8 +169,8 @@
 
           <div class="col-sm-auto col-md-6 bg-brand rounded shadow align-items-center p-4">
             <div class="row align-items-center">
-              <div class="col-md-6">
-                <div class="d-flex flex-column align-items-center">
+              <div class="col-12 col-md-6">
+                <div class="d-flex flex-column justify-content-center align-items-center">
                   <p class="fs-3 fw-bold text-center text-uppercase">Femenino</p>
                   <ul class="text-center fw-bold fc-light fc-brand-2">
                     <li>Hasta 19 años</li>
@@ -184,10 +184,10 @@
                 </div>
               </div>
 
-              <div class="col-md-6">
-                <div class="d-flex flex-column align-items-center">
-                  <p class="fs-3 fw-bold text-center text-uppercase">Masculino</p>
-                  <ul class="text-center fw-bold fc-light fc-brand-2">
+              <div class="col-12 col-md-6">
+                <div class="d-flex flex-column justify-content-center align-items-center">
+                  <p class="fs-3 fw-bold text-uppercase">Masculino</p>
+                  <ul class="text-justify fw-bold fc-light fc-brand-2">
                     <li>Hasta 19 años</li>
                     <li>20 - 39 años</li>
                     <li>30 - 39 años</li>
