--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -89,11 +89,9 @@
       <div class="row align-items-center p-5">
         <div class="col-12 p-5">
           <div class="text-center">
-            <h2 class="d-xs-none text-uppercase fw-bold">formulario de pre-inscripcion</h2>
-            <h5 class="d-none d-xs-block">formulario de pre-inscripcion</h5>
-            <p class="mt-2 text-justify">
-              Para completar el proceso de pre-inscripción y elegir la forma de pago,
-              <br>complete los datos solicitados en
+            <h2 class="d-xs-none text-uppercase fw-bold">pre-inscripcion</h2>
+            <h5 class="d-none d-xs-block">pre-inscripcion</h5>
+            <p class="mt-2 text-justify">Complete sus datos en
               el siguiente link:
             </p>
             <a href="/pages/form-inscricipcion.html"
