--- a/pages/recorridos.html
+++ b/pages/recorridos.html
@@ -77,13 +77,13 @@
           <div class="col-12 mt-5 d-flex justify-content-center align-items-center">
             <div class="row">
               <div class="col-4">
-                <a class="btn btn-light font-monospace fw-bold" href="#k-21" role="button">21K</a>
+                <a class="btn btn-dark font-monospace fw-bold" href="#k-21" role="button">21K</a>
               </div>
               <div class="col-4">
-                <a class="btn btn-light font-monospace fw-bold" href="#k-15" role="button">15K</a>
+                <a class="btn btn-dark font-monospace fw-bold" href="#k-15" role="button">15K</a>
               </div>
               <div class="col-4">
-                <a class="btn btn-light font-monospace fw-bold" href="#k-7" role="button">7K</a>
+                <a class="btn btn-dark font-monospace fw-bold" href="#k-7" role="button">7K</a>
               </div>
             </div>
           </div>
@@ -165,7 +165,7 @@
             <div class="recorridos__maps-items">
               <span class="icon-list fw-bold d-block pt-1">Largada: 08:00 hs</span>
               <span class="icon-list fw-bold d-block pt-1">PC en km: 5</span>
-              <span class="icon-list fw-bold d-block pt-1">tiempo limite: 3hs</span>
+              <span class="icon-list fw-bold d-block pt-1">tiempo limite: 2hs</span>
             </div>
 
             <div>
