--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -75,8 +75,8 @@
         <div class="row align-items-center justify-content-center">
           <div class="col-sm-12 col-md-6 mt-5">
             <h1 class="fw-bold text-uppercase pb-2">contacto</h1>
-            <span class="contacto__icons-tel d-block pt-2 text-justify fw-bold">Tel: +54******</span>
-            <span class="contacto__icons-gps d-block pt-2 text-start fw-bold">Direccion: Av.Ferre 900</span>
+            <span class="contacto__icons-tel d-block pt-2 text-justify fw-bold">+54**********</span>
+            <span class="contacto__icons-gps d-block pt-2 text-start fw-bold">Av.Ferre 900</span>
             <hr>
           </div>
         </div>
